server/compilers/goLiteJS/src/test/ml1/invalid/decl16.go
// no type or expression in tuple declaration
package main

var x, y
